syntax = "proto3";

option go_package = "datamodel";

package datamodel;


message RevtrMeasurement {
    string src       = 1;
    string dst       = 2;
    uint32 staleness = 3;
}

message RevtrRequest {
    repeated RevtrMeasurement revtrs  = 1;
}

message RevtrResponse {
    
}

